--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -6,6 +6,8 @@
     <link th:href="@{css/style.css}" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script type="text/javascript" th:src="@{js/script.js}"></script>
+    <script type="text/javascript"
+            src="webjars/jquery/2.2.4/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -26,7 +28,8 @@
                 <h2>Доска бесплатных частных объявлений</h2>
                 <button type="button" class="addAdvertisement btn btn-primary">Подать заявление</button>
             </div>
-            <div class="row blocksOfAdvertisements">
+            <div id="contentAdvertisements">
+            <!--<div class="row blocksOfAdvertisements">
                 <div class="col-md-12">
                     <div class="h-100 p-4 bg-light border rounded-3">
                         <h3>Name</h3>
@@ -87,16 +90,16 @@
                         <p>Text</p>
                     </div>
                 </div>
+            </div>-->
             </div>
         </div>
     </main>
     <footer class="footer fixed-bottom py-3 bg-light">
         <div class="container text-center">
-            <div class="row align-items-start">
+            <div class="row">
                 <div class="col" id="verticalBlock">
                     <h5>Вертикаль</h5>
-                    <ul id="vertical">
-                    </ul>
+                    <ul id="vertical"></ul>
                 </div>
                 <div class="col" id="contactsBlock">
                     <h5>Контакты</h5>
