--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -5,9 +5,10 @@
     <title>Advertisement board</title>
     <link th:href="@{css/style.css}" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script type="text/javascript" th:src="@{js/script.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{js/home.js}"></script>
     <script type="text/javascript"
-            src="webjars/jquery/2.2.4/jquery.min.js"></script>
+            src="webjars/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -16,13 +17,79 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Доска объявлений</a>
                 <div class="text-end" id="navbarCollapse">
-                    <button type="button" class="btn btn-outline-light me-2">Войти</button>
-                    <button type="button" class="btn btn-warning">Зарегистрироваться</button>
+                    <button type="button" class="btn btn-outline-light me-2" data-bs-toggle="modal" data-bs-target="#authorization">Войти</button>
+                    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#registration">Зарегистрироваться</button>
                 </div>
             </div>
         </nav>
     </header>
     <main class="flex-shrink-0">
+
+        <!-- Модальное окно регистрации -->
+        <div class="modal fade" id="registration" tabindex="-1" aria-labelledby="registrationLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="registrationLabel">Регистрация</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Адрес электронной почты</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                                <div id="regValEmail" class="invalid-feedback"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Пароль</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" required>
+                                <div id="regValPassword1" class="invalid-feedback"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword2" class="form-label">Повторите пароль</label>
+                                <input type="password" class="form-control" id="exampleInputPassword2" required>
+                                <div id="regValPassword2" class="invalid-feedback"></div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отменить</button>
+                        <button type="button" class="btn btn-primary" onclick="registration()">Зарегистрироваться</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Модальное окно авторизации -->
+        <div class="modal fade" id="authorization" tabindex="-1" aria-labelledby="authorizationLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="authorizationLabel">Авторизация</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="exampleInputEmail" class="form-label">Адрес электронной почты</label>
+                                <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
+                                <div id="authValEmail" class="invalid-feedback"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword" class="form-label">Пароль</label>
+                                <input type="password" class="form-control" id="exampleInputPassword">
+                                <div id="authValPassword" class="invalid-feedback"></div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <div id="authVal" class="invalid-feedback"></div>
+                        <button type="button" class="btn btn-primary" onclick="authorization()">Войти</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="container">
             <div class="headerMain row justify-content-center">
                 <h2>Доска бесплатных частных объявлений</h2>
@@ -99,7 +166,9 @@
             <div class="row">
                 <div class="col" id="verticalBlock">
                     <h5>Вертикаль</h5>
-                    <ul id="vertical"></ul>
+                    <div id="scrollBlock">
+                        <ul id="vertical"></ul>
+                    </div>
                 </div>
                 <div class="col" id="contactsBlock">
                     <h5>Контакты</h5>
