--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Advertisement board</title>
     <link th:href="@{css/style.css}" rel="stylesheet" />
-    <script type="text/javascript" th:src="@{js/script.js}"></script>
+    <script type="text/javascript" th:src="@{js/home.js}"></script>
     <script type="text/javascript"
-            src="webjars/jquery/2.2.4/jquery.min.js"></script>
+            src="webjars/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
   <p>Let's go</p>
