--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="headerMain row justify-content-center">
                 <h2>Доска бесплатных частных объявлений</h2>
-                <button type="button" class="addAdvertisement btn btn-primary">Подать заявление</button>
+                <button type="button" class="addAdvertisement btn btn-primary" onclick="createAdvertisement()">Подать заявление</button>
             </div>
             <div id="contentAdvertisements">
             <!--<div class="row blocksOfAdvertisements">
