--- a/src/main/resources/static/advertisements.html
+++ b/src/main/resources/static/advertisements.html
@@ -102,7 +102,7 @@
         <div class="advertisementsOfTheme row">
             <h3>Название блока</h3>
             <div class="row advert">
-                <div class="card mb-3 cardAdvert">
+                <div class="card mb-3 cardAdvert" onclick="showAdvert()">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="..." class="img-fluid rounded-start" alt="...">
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="row advert">
-                <div class="card mb-3 cardAdvert">
+                <div class="card mb-3 cardAdvert" onclick="showAdvert()">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="..." class="img-fluid rounded-start" alt="...">
@@ -126,6 +126,46 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Модальное окно просмотра объявления -->
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                 tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel">Название объявления</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img th:src="@{image/2768339668.jpg}" class="d-block w-100" alt="Первое изображение">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img th:src="@{image/2790875887.jpg}" class="d-block w-100" alt="Второе изображение">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img th:src="@{image/artleo.jpg}" class="d-block w-100" alt="Третье изображение">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Предыдущий</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Следующий</span>
+                                </button>
+                            </div>
+                            <div>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                             </div>
