--- a/src/main/resources/static/createAdvertisement.html
+++ b/src/main/resources/static/createAdvertisement.html
@@ -25,8 +25,11 @@
         </div>
     </nav>
 </header>
-<main data-bs-spy="scroll" class="flex-shrink-0">
-    <div class="container">
+<main class="flex-shrink-0">
+
+    <!-- TODO добавить скролл для формы -->
+
+    <div class="container form needs-validation">
         <div class="row">
             <h3 class="left">Создание объявления</h3>
         </div>
@@ -39,10 +42,12 @@
                 <div>
                     <label class="form-label">Заголовок</label>
                     <input type="text" class="form-control" id="title" placeholder="Введите заголовок">
+                    <div id="validTitle" class="invalid-feedback"></div>
                 </div>
                 <div>
                     <label class="form-label">Основное содержание</label>
                     <textarea class="form-control" placeholder="Введите текст объявления" id="description"></textarea>
+                    <div id="validDescription" class="invalid-feedback"></div>
                 </div>
             </div>
         </div>
@@ -69,13 +74,14 @@
                 <div>
                     <label class="form-label">Ваши контакты</label>
                     <textarea class="form-control" placeholder="Введите Ваши контактные данные" id="yourContacts"></textarea>
+                    <div id="validYourContacts" class="invalid-feedback"></div>
                 </div>
             </div>
         </div>
         <div class="row row-create">
-            <button class="btn btn-secondary col-2">Отменить</button>
-            <button class="btn btn-primary col-2 offset-5">Создать</button>
-            <button class="btn btn-primary col-2 offset-1">Удалить</button>
+            <button type="button" class="btn btn-secondary col-2" onclick="cancel()">Отменить</button>
+            <button type="button" class="btn btn-primary col-2 offset-5" onclick="create()">Создать</button>
+            <button type="button" class="btn btn-primary col-2 offset-1" onclick="remove()">Удалить</button>
         </div>
     </div>
 </main>
