Fix bug createAdvertisement.js Add scroll in createAdvertisement.html

--- a/src/main/resources/static/createAdvertisement.html
+++ b/src/main/resources/static/createAdvertisement.html
@@ -26,10 +26,7 @@
     </nav>
 </header>
 <main class="flex-shrink-0">
-
-    <!-- TODO добавить скролл для формы -->
-
-    <div class="container form needs-validation">
+    <div class="container form needs-validation overflow-auto">
         <div class="row">
             <h3 class="left">Создание объявления</h3>
         </div>
@@ -57,7 +54,7 @@
                 <div class="card-body">
                     <p class="card-text">Перетащите файлы способом drag and drop или нажмите на кнопку "Выбрать"</p>
                     <div id="fileDropBox">Перетащите файлы</div>
-                    <button class="btn btn-primary">Выбрать</button>
+                    <button type="button" class="btn btn-primary">Выбрать</button>
                 </div>
             </div>
             <div class="col">
