Fix adaptation in createAdvertisement.html Add links in footer

--- a/src/main/resources/static/createAdvertisement.html
+++ b/src/main/resources/static/createAdvertisement.html
@@ -97,7 +97,8 @@
             </div>
             <div class="col" id="linksBlock">
                 <h5>Социальные сети</h5>
-                <ul id="links"></ul>
+                <img th:src="@{image/vk.svg}" class="link-img" alt="Ссылка на ВК">
+                <img th:src="@{image/youtube.svg}" class="link-img" alt="Ссылка на Ютуб">
             </div>
         </div>
     </div>
