Open page advertisements.html auto

--- a/src/main/resources/static/advertisements.html
+++ b/src/main/resources/static/advertisements.html
@@ -99,9 +99,9 @@
                 <button type="button" class="btn btn-outline-warning">Искать</button>
             </div>
         </div>
-        <div class="advertisementsOfTheme row">
-            <h3>Название блока</h3>
-            <div class="row advert">
+        <div id="categoryListAdverts" class="row"></div>
+        <div id="listAdverts" class="advertisementsOfTheme row">
+            <!--<div class="row advert">
                 <div class="card mb-3 cardAdvert" onclick="showAdvert()">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
             <!-- Модальное окно просмотра объявления -->
             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
