--- a/src/main/resources/static/advertisements.html
+++ b/src/main/resources/static/advertisements.html
@@ -90,15 +90,15 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="headerSearch row justify-content-center">
+    <div class="container form overflow-auto">
+        <!--<div class="headerSearch row justify-content-center">
             <div class="col-11">
                 <input type="search" class="form-control form-control-light" placeholder="Поиск...">
             </div>
             <div class="col">
                 <button type="button" class="btn btn-outline-warning">Искать</button>
             </div>
-        </div>
+        </div>-->
         <div id="categoryListAdverts" class="row"></div>
         <div id="listAdverts" class="advertisementsOfTheme row">
             <!--<div class="row advert">
@@ -196,7 +196,7 @@
         </div>
     </div>
 </main>
-<footer class="footer fixed-bottom py-3 bg-light">
+<footer class="footer fixed-bottom bg-light">
     <div class="container text-center">
         <div class="row align-items-start">
             <div class="col" id="verticalBlock">
