--- a/src/main/resources/static/createAdvertisement.html
+++ b/src/main/resources/static/createAdvertisement.html
@@ -82,7 +82,7 @@
         </div>
     </div>
 </main>
-<footer class="footer fixed-bottom py-3 bg-light">
+<footer class="footer fixed-bottom bg-light">
     <div class="container text-center">
         <div class="row align-items-start">
             <div class="col" id="verticalBlock">
