--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -161,7 +161,7 @@
             </div>
         </div>
     </main>
-    <footer class="footer fixed-bottom py-3 bg-light">
+    <footer class="footer fixed-bottom bg-light">
         <div class="container text-center">
             <div class="row">
                 <div class="col" id="verticalBlock">
