--- a/src/main/resources/static/advertisements.html
+++ b/src/main/resources/static/advertisements.html
@@ -41,6 +41,11 @@
                             <div id="regValEmail" class="invalid-feedback"></div>
                         </div>
                         <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Имя</label>
+                            <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp" required>
+                            <div id="regValName" class="invalid-feedback"></div>
+                        </div>
+                        <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Пароль</label>
                             <input type="password" class="form-control" id="exampleInputPassword1" required>
                             <div id="regValPassword1" class="invalid-feedback"></div>
