--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -14,12 +14,9 @@
     <header>
     <!--Фиксированная навигационная панель-->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <div class="container-fluid">
+            <div id="headerNav" class="container-fluid">
                 <a class="navbar-brand" href="#">Доска объявлений</a>
-                <div class="text-end" id="navbarCollapse">
-                    <button type="button" class="btn btn-outline-light me-2" data-bs-toggle="modal" data-bs-target="#authorization">Войти</button>
-                    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#registration">Зарегистрироваться</button>
-                </div>
+                <div class="text-end" id="navbarCollapse"></div>
             </div>
         </nav>
     </header>
@@ -34,7 +31,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                     </div>
                     <div class="modal-body">
-                        <form>
+                        <form id="registerModalDialog">
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label">Адрес электронной почты</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
@@ -74,7 +71,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                     </div>
                     <div class="modal-body">
-                        <form>
+                        <form id="authorModalDialog">
                             <div class="mb-3">
                                 <label for="exampleInputEmail" class="form-label">Адрес электронной почты</label>
                                 <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
