Working with the title bar

--- a/src/main/resources/static/advertisements.html
+++ b/src/main/resources/static/advertisements.html
@@ -16,10 +16,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Доска объявлений</a>
-            <div class="text-end" id="navbarCollapse">
-                <button type="button" class="btn btn-outline-light me-2" data-bs-toggle="modal" data-bs-target="#authorization">Войти</button>
-                <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#registration">Зарегистрироваться</button>
-            </div>
+            <div class="text-end" id="navbarCollapse"></div>
         </div>
     </nav>
 </header>
