--- a/src/main/resources/static/createAdvertisement.html
+++ b/src/main/resources/static/createAdvertisement.html
@@ -74,10 +74,21 @@
                 </div>
             </div>
         </div>
-        <div class="row row-create">
+        <div id="buttonsRow" class="row row-create">
             <button type="button" class="btn btn-secondary col-2" onclick="cancel()">Отменить</button>
-            <button type="button" class="btn btn-primary col-2 offset-5" onclick="create()">Создать</button>
-            <button type="button" class="btn btn-primary col-2 offset-1" onclick="remove()">Удалить</button>
+            <button type="button" id="create" class="btn btn-primary col-2 offset-5" onclick="create()">Создать</button>
+            <button type="button" id="remove" class="btn btn-primary col-2 offset-1" onclick="remove()">Удалить</button>
+        </div>
+    </div>
+
+    <!-- Всплывающее сообщение -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">Создание объявления</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
+            </div>
+            <div id="toastBodyText" class="toast-body"></div>
         </div>
     </div>
 </main>
