--- a/src/main/resources/static/createAdvertisement.html
+++ b/src/main/resources/static/createAdvertisement.html
@@ -18,7 +18,7 @@
     <!-- Фиксированная навигационная панель -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Доска объявлений</a>
+            <a class="navbar-brand" href="/home">Доска объявлений</a>
             <div class="text-end" id="navbarCollapse">
             </div>
         </div>
