--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -15,7 +15,7 @@
     <!--Фиксированная навигационная панель-->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div id="headerNav" class="container-fluid">
-                <a class="navbar-brand" href="#">Доска объявлений</a>
+                <a class="navbar-brand" href="/home">Доска объявлений</a>
                 <div class="text-end" id="navbarCollapse"></div>
             </div>
         </nav>
@@ -28,7 +28,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="registrationLabel">Регистрация</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть" onclick="closeModalReg()"></button>
                     </div>
                     <div class="modal-body">
                         <form id="registerModalDialog">
@@ -55,7 +55,7 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отменить</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="closeModalReg()">Отменить</button>
                         <button type="button" class="btn btn-primary" onclick="registration()">Зарегистрироваться</button>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="authorizationLabel">Авторизация</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть" onclick="closeModalAuth()"></button>
                     </div>
                     <div class="modal-body">
                         <form id="authorModalDialog">
